--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.ozgen</groupId>
 	<artifactId>miro</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>miro</name>
 	<description>Miro Widget Management Backend Application</description>
 	<url>http://goldennode.io/miro</url>
